--- a/course-materials/week10.qmd
+++ b/course-materials/week10.qmd
@@ -77,6 +77,8 @@ knitr::include_graphics(here::here("images", "horst-touchstones.png"))
 
 *Coming soon!*
 
+<!-- PRACTICE PRESENTATIONS WITH PARTNERS -->
+
 <!-- Let's celebrate all of our hard work with a data visualization showcase! Everyone will have ~2 minutes to show off their creations. Please add your three data visualizations (option 1) or infographic (option 2) to your assigned slide (linked below) and come prepared to *briefly* describe the following: -->
 
 <!-- 1. Describe your data and where you found it -->
