--- a/course-materials/week5.qmd
+++ b/course-materials/week5.qmd
@@ -4,6 +4,12 @@ subtitle: "Week 5"
 description: "Monday February 3^rd^, 2025"
 ---
 
+::: {.callout-important}
+## TODO
+create discussion section materials
+:::
+
+
 ```{r}
 #| eval: true 
 #| echo: false
@@ -68,6 +74,11 @@ I'll be using both of these (really wonderful and easy-to-use) tools during lect
 ## {{< fa comments title="two speech bubbles" >}} Discussion Materials {#discussion-materials}
 
 *Coming soon!*
+
+| {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
+|-------------------|-------------------|--------------|
+| [D5 slides: "non-standard" graphic forms](discussion/week5/week5-slides.qmd) | tbd | tbd |
+: {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 <!-- This week, you'll be prepping a data visualization using the data you found / wrangled as part of your final project (HW #4). This does not need to be a polished viz, but should focus on clarity of message. You'll be discussing each others' visualizations and commenting on what the main takeaways are (ideally, you'll walk away with the same message as intended by the plot-creator!). Please complete the following ahead of section: -->
 
