--- a/course-materials/week6.qmd
+++ b/course-materials/week6.qmd
@@ -4,6 +4,11 @@ subtitle: "Week 6"
 description: "Monday February 10^th^, 2025"
 ---
 
+::: {.callout-important}
+## TODO
+come back to discussion section bc my brain is melting 
+:::
+
 ```{r}
 #| eval: true 
 #| echo: false
@@ -58,8 +63,12 @@ knitr::include_graphics(here::here("images", "horst-ggplot-masterpiece.png"))
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lecture slides   | {{< fa file-code title="A code file" >}} Code-along template | {{< fa key title="A key" >}} Code-along key |
 |------------------------------------------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------|
 | [Lecture 6.1: typography](lecture-slides/lecture6.1-typography-slides.qmd){target="_blank"}  | [6.1 template](){target="_blank"} | [6.1 key](keys/KEY-lecture6.1-typography.qmd){target="_blank"} |
-| [Lecture 6.2: annotations](lecture-slides/lecture6.2-annotations-slides.qmd){target="_blank"} | [6.2 template](){target="_blank"} | [6.2 key](){target="_blank"} |
+| [Lecture 6.2: annotations](lecture-slides/lecture6.2-annotations-slides.qmd){target="_blank"} | [6.2 template](){target="_blank"} | [6.2 key](keys/KEY-lecture6.2-annotations.qmd){target="_blank"} |
 : {.hover .bordered tbl-colwidths="[50,25,25]"} 
+
+## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-discussion Prep {#pre-discussion-prep} 
+
+*Coming soon!*
 
 ## {{< fa comments title="two speech bubbles" >}} Discussion Materials {#discussion-materials}
 
@@ -73,7 +82,7 @@ knitr::include_graphics(here::here("images", "horst-ggplot-masterpiece.png"))
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [D5 slides: "advanced" graphic forms](discussion/week4/week5-slides.qmd) | *NA* | *NA* |
+| [D6 slides: saving plots???](discussion/week6/week6-slides.qmd) | tbd | tbd |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
